--- a/app/src/main/res/layout/fragment_active_booking.xml
+++ b/app/src/main/res/layout/fragment_active_booking.xml
@@ -5,21 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
-    android:weightSum="20"
     android:orientation="vertical"
+    android:weightSum="20"
     tools:context=".ui.fragments.user.booking.ActiveBookingFragment">
 
     <LinearLayout
-        android:layout_weight="10"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:background="#FFFFFF"
+        android:layout_weight="10"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="12">
@@ -40,8 +43,8 @@
                 android:fontFamily="@font/lato_bold"
                 android:text="Confirmed"
                 android:textAlignment="center"
-                android:textSize="16sp"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/textColor"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="75dp"
@@ -54,13 +57,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/confirmedBookingStatusNone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:drawableTop="@drawable/ic_icon_status_none"
                 android:fontFamily="@font/lato"
-                android:text="No confirmed bookings (yet)."
+                android:text="No confirmed bookings."
                 android:textColor="@color/textColor"
                 android:textSize="16sp"
                 android:visibility="visible" />
@@ -74,18 +79,20 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="10"
-        android:elevation="8dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
         android:background="@drawable/background_booking_pending"
-        android:layout_height="0dp">
+        android:elevation="8dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="12">
@@ -106,8 +113,8 @@
                 android:fontFamily="@font/lato_bold"
                 android:text="Pending"
                 android:textAlignment="center"
-                android:textSize="16sp"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="75dp"
@@ -117,27 +124,30 @@
                 android:background="#80FFFFFF" />
         </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/pendingBookingStatusNone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:fontFamily="@font/lato"
-            android:text="No pending bookings (yet)."
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            android:visibility="visible" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/pendingBookingList"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:layout_height="match_parent">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/pendingBookingStatusNone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:drawableTop="@drawable/ic_icon_status_none"
+                android:drawableTint="#FFFFFF"
+                android:fontFamily="@font/lato"
+                android:text="No pending bookings."
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:visibility="visible" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/pendingBookingList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
