--- a/app/src/main/res/layout/rent_item_layout.xml
+++ b/app/src/main/res/layout/rent_item_layout.xml
@@ -40,7 +40,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/lato_bold"
                     android:maxLines="1"
-                    android:text="van_model"
+                    android:text=""
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
 
@@ -52,7 +52,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/lato"
                     android:maxLines="1"
-                    android:text="owner"
+                    android:text=""
                     android:textColor="@color/textColor"
                     android:textSize="14sp" />
 
@@ -70,7 +70,7 @@
                     android:ellipsize="end"
                     android:layout_above="@+id/divider1"
                     android:fontFamily="@font/lato"
-                    android:text="description"
+                    android:text=""
                     android:textColor="@color/textColor"
                     android:textSize="14sp" />
 
@@ -93,22 +93,18 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
-                        android:text="Total:"
+                        android:text="@string/peso_sign"
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
 
-                    <Space
-                        android:layout_width="8dp"
-                        android:layout_height="match_parent"/>
-
                     <TextView
-                        android:id="@+id/rentalsPrice"
+                        android:id="@+id/price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
                         android:maxLines="1"
-                        android:text="0000.00"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
 
