--- a/app/src/main/res/layout/upload_image_item_layout.xml
+++ b/app/src/main/res/layout/upload_image_item_layout.xml
@@ -6,21 +6,21 @@
 
     <ImageView
         android:id="@+id/imageItem"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/placeholder_add_image" />
 
     <ImageButton
         android:id="@+id/btnClose"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignEnd="@+id/imageItem"
+        android:layout_margin="8dp"
         android:background="@drawable/ic_btn_close" />
 
 </RelativeLayout>
